--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -341,6 +341,7 @@ body
     color: #ccc;
     padding: 20px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 .x-dialog .x-title
 {
@@ -609,6 +610,25 @@ body
     color: #efefef;
     font-size: 14px;
 }
+.x-progress
+{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 10000;
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+}
+.x-progress div
+{
+    margin-top: 60px;
+    height: 60px;
+    line-height: 60px;
+    font-size: 18px;
+}
 .x-fmanager .x-filelist
 {
     height: 360px;
@@ -690,4 +710,21 @@ button input[type=file]
     top: 0px;
     left: 0px;
     cursor: pointer;
+}
+.x-greeting
+{
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    width: 400px;
+    min-height: 40px;
+    line-height: 40px;
+    padding: 0px 10px 0px 10px;
+    background-color: rgba(42, 99, 25, 0.8);
+    color: #ffffff;
+    z-index: 2000;
+}
+.x-greeting-warning
+{
+    background-color: rgba(255, 51, 0, 0.8);
 }
